--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -44,3 +44,6 @@ a.icon-star {
 a.icon-fork {
     content: url("../assets/icons/fork.svg");
 }
+a.icon-heart {
+    content: url("../assets/icons/heart.svg");
+}
