--- a/src/fragments/Featured/styles.scss
+++ b/src/fragments/Featured/styles.scss
@@ -9,9 +9,10 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
+    padding-bottom: 100px;
     h1 {
         color: $white;
         padding-top: 100px;
+        text-align: center;
     }
 }
