--- a/src/fragments/Stack/styles.scss
+++ b/src/fragments/Stack/styles.scss
@@ -1,7 +1,7 @@
 @import "../../scss/colors";
 
 .stack {
-    height: 65vh;
+    min-height: 65vh;
     width: 100%;
     display: flex;
     align-items: center;
@@ -15,6 +15,7 @@
         color: $white;
         text-align: center;
         margin-bottom: 35px!important;
+        padding-top: 65px;
     }
 
     .technologies {
@@ -22,6 +23,11 @@
         justify-content: center;
         flex-wrap: wrap;
         width: 900px;
+        padding-bottom: 100px;
+        @media screen and (max-width: 900px) {
+            width: 100%;
+            
+        }
         
         .technology {
             cursor: pointer;
