important css fix

--- a/src/fragments/Home/styles.scss
+++ b/src/fragments/Home/styles.scss
@@ -20,32 +20,36 @@
         font-family: "Gilroy-Light"
     }
 
+    .logo {
+        position: absolute;
+        left: 35px;
+        animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+    }
     .top {
         top: 35px;
         right: 0;
         position: absolute;
         width: 100%;
-        .logo {
-            content: url("https://i.imgur.com/lwxaMD3.png");
-            width: 50px;
-            left: 35px;
-            top: -10px;
-            position: absolute;
-        }
         .socials {
             position: absolute;
             text-align: center;
             right: 35px;
             a {
-                margin: 0px 10px;
-                transition: all 250ms ease-in-out;
-                border-radius: 50%;
+                img {
+                    margin: 0px 10px;
+                    transition: all 250ms ease-in-out;
+                    border-radius: 50%;
+                    width: 32px;
+                    animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+                }
                     
                 &:hover {
-                    transform: scale(1.1);
-                    
-                    background: $white;
-                    opacity: 0.9;
+                    img {
+                        transform: scale(1.1);
+                        
+                        background: $white;
+                        opacity: 0.9;
+                    }
                 }
             }   
         }
