--- a/src/fragments/Stack/styles.scss
+++ b/src/fragments/Stack/styles.scss
@@ -42,13 +42,13 @@
             background: $white;
             margin: 15px;
             box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-            
-            // animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+            text-decoration: none;
 
             a {
                 width: 50px;
                 height: auto;
                 padding: 15px 0px 15px 15px;
+                text-decoration: none;
             }
             p {
                 padding: 15px;
