--- a/src/fragments/Stack/styles.scss
+++ b/src/fragments/Stack/styles.scss
@@ -52,6 +52,7 @@
             }
             p {
                 padding: 15px;
+                cursor: pointer;
             }
 
             transition: transform 0.15s ease-in-out;
