added aureleoules2 & aureleoules3

--- a/src/scss/_icons.scss
+++ b/src/scss/_icons.scss
@@ -1,5 +1,5 @@
 a.icon-js::before {
-    content: url("../assets/icons/JavaScript.svg");
+    content: url("../assets/icons/javascript.svg");
 }
 a.icon-nodejs::before {
     content: url("../assets/icons/nodejs.svg");
@@ -11,7 +11,7 @@ a.icon-webpack::before {
     content: url("../assets/icons/webpack.svg");
 }
 a.icon-golang::before {
-    content: url("../assets/icons/Go.svg");
+    content: url("../assets/icons/go.svg");
 }
 a.icon-mongodb::before {
     content: url("../assets/icons/mongodb.svg");
