--- a/src/fragments/Home/styles.scss
+++ b/src/fragments/Home/styles.scss
@@ -24,6 +24,10 @@
         position: absolute;
         left: 35px;
         animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+
+        img {
+            width: 50px;
+        }
     }
     .top {
         top: 35px;
