--- a/src/fragments/Home/styles.scss
+++ b/src/fragments/Home/styles.scss
@@ -29,12 +29,24 @@
             width: 50px;
         }
     }
-
+    
     .top {
         top: 35px;
         right: 0;
         position: absolute;
         width: 100%;
+        
+        .contact {
+            border-radius: 20px;
+            padding: 6px 15px;
+            background: #65cbb7;
+            color: white;
+            text-decoration: none;
+            font-family: 'HansKendrick';
+            // transition: none;
+            transform: none!important;
+            animation: scale-in-center 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+        }
 
         .socials {
             position: absolute;
@@ -45,6 +57,8 @@
 
             a {
                 transition: all 100ms ease-in-out;
+                display: flex;
+                align-items: center;
                 img {
                     margin: 0px 10px;
                     transition: all 250ms ease-in-out;
@@ -59,7 +73,7 @@
                 }
 
                 &:hover {
-                    transform: scale(1.2)!important;
+                    transform: scale(1.2);
                     opacity: 0.8;
                 }
             }
