--- a/src/fragments/Home/styles.scss
+++ b/src/fragments/Home/styles.scss
@@ -20,6 +20,30 @@
         font-family: "Gilroy-Light"
     }
 
+    .infos {
+        position: relative;
+        height: 125px;
+    }
+
+    .project-contact {
+        position: absolute;
+        width: calc(100% - 0px);
+        border: solid 2px #65ccb8;
+        border-radius: 8px;
+        box-sizing: border-box;
+        padding: 12px;
+        color: white;
+        font-family: 'HansKendrick';
+        text-align: center;
+        margin-top: 10%;
+        text-decoration: none;
+        transition: 0.25s;
+
+        &:hover,&:focus {
+            box-shadow: inset 20em 0 0 0 #65ccb8;
+        }
+    }
+
     .logo {
         position: absolute;
         left: 35px;
