--- a/src/fragments/Footer/styles.scss
+++ b/src/fragments/Footer/styles.scss
@@ -8,24 +8,12 @@
     justify-content: center;
     position: relative;
 
-    .donate {
-        color: #65ccb8;
-        position: absolute;
-        bottom: 5px;
-        right: 0;
-        left: 0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
     .content {
         width: 960px;
         text-align: center;
         color: $white;
 
-        img {
+        img.animate {
             width: 60px;
             transition-duration: 0.8s;
             transition-property: transform;
